[build-system]
build-backend = "maturin"
requires = ["maturin>=1.7,<2.0"]

[project]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
]
dynamic = ["version"]
name = "hello-pyo3"
requires-python = ">=3.12"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
